--- a/Firmware/F446-PWR/platformio.ini
+++ b/Firmware/F446-PWR/platformio.ini
@@ -16,5 +16,5 @@ framework = arduino
 monitor_speed = 115200
 lib_deps = 
 	shirokuma89dev/IO-Kit@^1.0.0
-	adafruit/Adafruit TCS34725@^1.4.4
 	adafruit/Adafruit BusIO@^1.15.0
+	pololu/VL53L0X@^1.3.1
