--- a/Firmware/F446-PWR/platformio.ini
+++ b/Firmware/F446-PWR/platformio.ini
@@ -15,6 +15,6 @@ board_build.mcu = stm32f446ret6
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-	shirokuma89dev/IO-Kit@^1.0.0
 	adafruit/Adafruit BusIO@^1.15.0
 	pololu/VL53L0X@^1.3.1
+	stm32duino/STM32duino FreeRTOS@^10.3.1
