--- a/Firmware/RP2040-LiDAR/platformio.ini
+++ b/Firmware/RP2040-LiDAR/platformio.ini
@@ -8,13 +8,14 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:genericSTM32F446RE]
-platform = ststm32
-board = genericSTM32F446RE
-board_build.mcu = stm32f446ret6
+[env:seeed_xiao_rp2040]
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+board = seeed_xiao_rp2040
+board_build.core = earlephilhower
+board_build.filesystem_size = 0.5m
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
+	hideakitai/PCA95x5@^0.1.3
+	adafruit/Adafruit NeoPixel@^1.12.0
 	pololu/VL53L0X@^1.3.1
-	stm32duino/STM32duino FreeRTOS@^10.3.1
-	; paulstoffregen/PWMServo@^2.1
