--- a/Firmware/RP2040-LiDAR/platformio.ini
+++ b/Firmware/RP2040-LiDAR/platformio.ini
@@ -19,3 +19,5 @@ lib_deps =
 	hideakitai/PCA95x5@^0.1.3
 	adafruit/Adafruit NeoPixel@^1.12.0
 	pololu/VL53L0X@^1.3.1
+	adafruit/Adafruit SSD1306@^2.5.9
+	adafruit/Adafruit GFX Library@^1.11.9
