✨ LIDAR読めた gitflow-feature-stash: 14-lidar

--- a/Firmware/F446-LiDAR/platformio.ini
+++ b/Firmware/F446-LiDAR/platformio.ini
@@ -14,4 +14,6 @@ board = genericSTM32F446RE
 board_build.mcu = stm32f446ret6
 framework = arduino
 monitor_speed = 115200
+upload_protocol = serial
 lib_deps = shirokuma89dev/IO-Kit@^1.0.0
+upload_port = /dev/cu.usbserial-110
