✅ とりあえず共分散

--- a/Firmware/F446-LiDAR/platformio.ini
+++ b/Firmware/F446-LiDAR/platformio.ini
@@ -16,4 +16,4 @@ framework = arduino
 monitor_speed = 115200
 upload_protocol = serial
 lib_deps = shirokuma89dev/IO-Kit@^1.0.0
-upload_port = /dev/cu.usbserial-110
+; upload_port = /dev/cu.usbserial-110
