--- a/main/F446-ONAMAZU/platformio.ini
+++ b/main/F446-ONAMAZU/platformio.ini
@@ -20,3 +20,4 @@ lib_deps =
 	adafruit/Adafruit BNO055@^1.6.1
 	adafruit/Adafruit BusIO@^1.14.1
 	stm32duino/STM32duino FreeRTOS@^10.3.1
+	electroniccats/MPU6050@^1.3.0
