--- a/main/F446-BNO085/platformio.ini
+++ b/main/F446-BNO085/platformio.ini
@@ -19,5 +19,5 @@ lib_deps =
 	adafruit/Adafruit BNO055@^1.6.1
 	adafruit/Adafruit BusIO@^1.14.1
 	stm32duino/STM32duino FreeRTOS@^10.3.1
-	electroniccats/MPU6050@^1.3.0
 	adafruit/Adafruit BNO08x@^1.2.5
+upload_port = /dev/tty.usbserial-110
