✅ キャリブレーション

--- a/main/F446-BNO085/platformio.ini
+++ b/main/F446-BNO085/platformio.ini
@@ -15,9 +15,5 @@ board_build.mcu = stm32f446ret6
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-	adafruit/Adafruit NeoPixel@^1.10.6
-	adafruit/Adafruit BNO055@^1.6.1
-	adafruit/Adafruit BusIO@^1.14.1
-	stm32duino/STM32duino FreeRTOS@^10.3.1
-	adafruit/Adafruit BNO08x@^1.2.5
+	sparkfun/SparkFun BNO08x Cortex Based IMU@^1.0.5
 upload_port = /dev/tty.usbserial-110
